<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidCLIENTwithGUI</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string><string name="string_forward">forward</string><string name="string_backward">backward</string><string name="string_left">left</string><string name="string_right">right</string><string name="string_stop">stop</string><color name="color_red">#ff0000</color><color name="color_white">#ffffff</color><color name="color_yellow">#ffff00</color><color name="color_green">#008000</color><color name="color_greenyellow">#adff2f</color><dimen name="margin24">24dp</dimen><dimen name="largeFontStatic24">24dp</dimen><dimen name="margin12">12dp</dimen><string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="dialog_speed_pick_message">Change the Speed of the VEX robot</string>
    <string name="dialog_change_speed">Change Speed</string>
    <string name="dialog_cancel_change">Cancel</string>
    <string name="string_speed">speed</string>
    <string name="string_exit">exit</string>

</resources>
